# virtual_technomancy_conclave

./: .gitignore  README.md  cleanup_repo.py  conclave_usage.jsonl  conftest.py  cost_cap_demo.py  hello.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_t15b_implementation.py
agents/: __init__.py  agent_factory.py  apprentice_generic.py  arch.py  base.py  high_engineering.py  high_qa.py  import_utils.py  technomancer_base.py  technomancer_code.py  technomancer_generic.py
auth_module_d6a3bb/: hello.txt
conclave/: __init__.py  conclave_usage.jsonl
conclave/agents/: agent_factory.py  arch_runner.py  exceptions.py  high_behavior.py  high_technomancer.py  (+2 more)
config/: __init__.py  guardrails.yaml  loader.py  project_manifest.yaml  roles.yaml
docs/: GOVERNANCE.md  MILESTONES.md  ROLE_HIERARCHY.md
services/: memory.py  search.py
tests/: test_agent_factory.py  test_bootstrap.py  test_cli_demo.py  test_code_ledger.py  test_config_loader.py  test_contextvar_bug.py  test_cost_boundary.py  test_cost_cap_enforcement.py  test_cost_guardrail.py  test_cost_metric_event.py  test_debate_manager.py  test_file_io.py  test_high_technomancer.py  test_import_utils.py  test_memory.py  test_milestone_graph.py  test_milestone_runner.py  test_parallel_runner.py  test_parallel_runner.py.new  test_peer_chat_a2a.py  test_race_condition.py  test_simple_ledger.py  test_sse_roundtrip.py  test_technomancer_base.py  test_technomancer_llm.py  test_trace_fail_open.py  test_trace_utils.py  test_tracing_spans.py  test_web_search_tool.py
tools/: cost_tracker.py
(+19 files in other folders)
